Add CPU pool
This massively improves latency and throughput. Before IO virtual threads
were getting starved whenever CPU intensive tasks were running on
virtual threads as virtual threads do no do time sharing with other
virtual threads.

Brotli, hiccup, sqlite reads/writes are all CPU intensive tasks.