@@ -15,8 +15,11 @@
   (b/compile-clj {:basis      @basis
                   :ns-compile '[app.main]
                   :src-dirs   ["src"]
-                  :class-dir  class-dir})
+                  :class-dir  class-dir
+                  :java-opts ;; needed for coffi
+                  ["--enable-native-access=ALL-UNNAMED"]})
   (b/uber {:class-dir class-dir
            :uber-file uber-file
            :basis     @basis
-           :main      'app.main}))
+           :main      'app.main
+           :manifest  {"Enable-Native-Access" "ALL-UNNAMED"}}))
